# codeimpact-agent

./: .gitignore  .upstream-frozen-at.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
data/eval/: sample.csv  sample.diff  sample_api.diff  sample_app.diff  sample_cli.diff  sample_config.diff  sample_core.diff  sample_core_contract.diff  sample_docs.diff  sample_dyn.diff  sample_init.diff  sample_plugin_loader.diff  sample_readme.diff  sample_service.diff  sample_service_docs.diff  sample_test_core.diff  sample_test_service.diff  sample_util_contract.diff
data/eval/sample_repo/: README.md  app.py  cli.py  config.py  dyn_loader.py  plugin_loader.py
data/eval/sample_repo/docs/: service.md  usage.md
data/eval/sample_repo/pkg/: __init__.py  api.py  core.py  service.py
data/eval/sample_repo/tests/: test_app.py  test_cli.py  test_core.py  (+2 more)
docs/: baro_cb6ec84.diff  demo_script.md  interview_review.md  rca_e677b29.diff  resume_package_zh.md  verification_evidence.md
src/codeimpact/: __init__.py  __main__.py  api.py  ast_graph.py  cli.py  diff_parser.py  eval.py  graph.py  mcp_server.py  report.py  risk.py
src/codeimpact/memory/: adapters.py  sqlite_memory.py
src/codeimpact/rag/: __init__.py  adapters.py  chunker.py  indexer.py  retriever.py  schema.sql  search.py
src/codeimpact/tools/: git_tools.py
tests/: conftest.py
tests/codeimpact/: test_adapters.py  test_api.py  test_ast_graph.py  test_cli.py  test_diff_parser.py  test_eval.py  test_graph.py  test_mcp_server.py  test_rag.py  test_retriever.py  test_risk.py  test_sqlite_memory.py
