[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeimpact-agent"
version = "0.1.0"
description = "Python code change impact analysis agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "jpp", email = "11279052+danjuan22@user.noreply.gitee.com"}]
dependencies = [
    "fastmcp>=2.12",
    "langgraph>=0.4",
    "typer>=0.12",
    "openai>=1.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0", "fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
codeimpact = "codeimpact.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
